Implement functional BookingService allowing reservations and payments via square