@@ -1,12 +1,11 @@
 package fr.terrier.apiterriercrm.service;
 
 import fr.terrier.apiterriercrm.mapper.BookingMapper;
+import fr.terrier.apiterriercrm.mapper.BookingPeriodMapper;
 import fr.terrier.apiterriercrm.model.dto.BookingRequest;
 import fr.terrier.apiterriercrm.model.dto.BookingResponse;
 import fr.terrier.apiterriercrm.model.dto.PaymentRequest;
 import fr.terrier.apiterriercrm.model.dto.PricingDetail;
-import fr.terrier.apiterriercrm.model.entity.BasePeriodConfigurationEntity;
-import fr.terrier.apiterriercrm.model.entity.PricingConfigurationEntity;
 import fr.terrier.apiterriercrm.model.entity.booking.BookingEntity;
 import fr.terrier.apiterriercrm.model.entity.booking.BookingInformationEntity;
 import fr.terrier.apiterriercrm.model.entity.booking.BookingPeriodEntity;
@@ -28,9 +27,7 @@ import reactor.core.publisher.SynchronousSink;
 import reactor.core.scheduler.Scheduler;
 
 import java.util.Objects;
-import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -40,48 +37,50 @@ public class BookingService {
     private final UserService userService;
     private final PricingService pricingService;
     private final BookingMapper bookingMapper;
+    private final BookingPeriodMapper bookingPeriodMapper;
     private final BookingRepository bookingRepository;
     private final BookingPricingDetailRepository bookingPricingDetailRepository;
     @Qualifier("datasourceScheduler")
     private final Scheduler datasourceScheduler;
 
-    public Mono<BookingResponse> book(@Valid @RequestBody BookingRequest request) {
+    public Mono<BookingResponse> book(@Valid @RequestBody BookingRequest bookingRequest) {
         // TODO map and handle booking errors to ResponseException
-        return pricingService.getBookingPriceDetail(request.getType(), request.getPeriod())
+        // TODO check that period is not already booked (availability service ?)
+        return pricingService.getBookingPriceDetail(bookingRequest.getType(), bookingRequest.getPeriod())
                              .handle((PricingDetail pricingDetail, SynchronousSink<PaymentRequest> sink) -> {
-                                 var amount = pricingDetail.totalCents(request.getType());
-                                 if (!Objects.equals(amount, request.getInformation().getPaymentAmountCents())) {
-                                     sink.error(new ResponseException(HttpStatus.BAD_REQUEST, "Calculated booking amount and amount sent by client do not match"));
+                                 var amount = pricingDetail.totalCents(bookingRequest.getType());
+                                 if (!Objects.equals(amount, bookingRequest.getInformation().getPaymentAmountCents())) {
+                                     sink.error(new ResponseException(HttpStatus.BAD_REQUEST, "Calculated booking amount %d and amount sent by client %d do not match", amount, bookingRequest.getInformation().getPaymentAmountCents()));
+                                 } else {
+                                     sink.next(PaymentRequest.builder()
+                                                             .idempotencyKey(UUID.randomUUID())
+                                                             .sourceId(bookingRequest.getInformation().getPaymentSourceId())
+                                                             .amount(amount)
+                                                             .detail(pricingDetail)
+                                                             .build());
                                  }
-                                 sink.next(PaymentRequest.builder()
-                                                         .idempotencyKey(UUID.randomUUID())
-                                                         .sourceId(request.getInformation().getPaymentSourceId())
-                                                         .amount(amount)
-                                                         .detail(pricingDetail)
-                                                         .build());
                              })
-                             .flatMap(paymentRequest -> userService.createOrGet(request.getUser())
+                             .flatMap(paymentRequest -> userService.createOrGet(bookingRequest.getUser())
                                                                    .map(userEntity -> BookingEntity.builder()
                                                                                                    .period(BookingPeriodEntity.builder()
-                                                                                                                              .start(request.getPeriod().getStart())
-                                                                                                                              .end(request.getPeriod().getEnd())
+                                                                                                                              .start(bookingRequest.getPeriod().getStart())
+                                                                                                                              .end(bookingRequest.getPeriod().getEnd())
                                                                                                                               .build())
                                                                                                    .information(BookingInformationEntity.builder()
-                                                                                                                                        .comment(request.getInformation().getComment())
-                                                                                                                                        .guestsCount(request.getInformation().getGuestsCount())
+                                                                                                                                        .comment(bookingRequest.getInformation().getComment())
+                                                                                                                                        .guestsCount(bookingRequest.getInformation().getGuestsCount())
                                                                                                                                         .build())
-                                                                                                   .type(request.getType())
-                                                                                                   .idempotencyKey(paymentRequest.getIdempotencyKey())
+                                                                                                   .type(bookingRequest.getType())
+                                                                                                   .idempotencyKey(paymentRequest.getIdempotencyKey().toString())
                                                                                                    .userId(userEntity.getId())
                                                                                                    .build())
                                                                    .map(bookingRepository::save)
                                                                    .flatMap(bookingEntity -> persistPricingDetails(bookingEntity, paymentRequest.getDetail()).thenReturn(bookingEntity))
                                                                    .subscribeOn(datasourceScheduler)
-                                                                   .flatMap(booking -> paymentService.createPayment(paymentRequest)
-                                                                                                     // TODO update the created payment to next status ? (squareClient.completePayment()) -> check square workflows
-                                                                                                     .flatMap(paymentResponse -> completeBooking(booking.getId(), paymentResponse.getPayment().getId()))
-                                                                                                     .doOnError(e -> log.error("Error while creating payment for booking completion", e))
-                                                                                                     .onErrorResume(e -> abortBooking(request))))
+                                                                   .flatMap(bookingEntity -> paymentService.createPayment(paymentRequest, bookingRequest.getUser().getEmail(), bookingEntity.getUserId())
+                                                                                                           .flatMap(paymentResponse -> completeBooking(bookingEntity.getId(), paymentResponse.getPayment().getId()).thenReturn(bookingEntity))
+                                                                                                           .doOnError(e -> log.error("Error while creating payment for booking completion", e))
+                                                                                                           .onErrorResume(e -> abortBooking(bookingRequest).thenReturn(bookingEntity))))
                              .map(bookingMapper::map);
     }
 
@@ -93,25 +92,18 @@ public class BookingService {
                                                     .map(bookingPeriod -> BookingPricingDetailEntity.builder()
                                                                                                     .bookingId(bookingEntity.getId())
                                                                                                     .bookingPeriod(bookingEntity.getPeriod())
-                                                                                                    .periodConfiguration(BasePeriodConfigurationEntity.builder()
-                                                                                                                                                      .pricing(PricingConfigurationEntity.builder()
-                                                                                                                                                                                         .both(bookingPeriod.getPricing().getBoth())
-                                                                                                                                                                                         .grapes(bookingPeriod.getPricing().getGrapes())
-                                                                                                                                                                                         .pear(bookingPeriod.getPricing().getPear())
-                                                                                                                                                                                         .build())
-                                                                                                                                                      .build())
+                                                                                                    .periodConfiguration(bookingPeriodMapper.map(bookingPeriod))
                                                                                                     .build())
-                                                    .collect(Collectors.toList()))
+                                                    .toList())
                    .flatMap(details -> Mono.fromCallable(() -> bookingPricingDetailRepository.saveAll(details))
                                            .subscribeOn(datasourceScheduler));
     }
 
-    private Mono<BookingEntity> completeBooking(final Long bookingId, @NonNull final String paymentId) {
+    private Mono<Boolean> completeBooking(final Long bookingId, @NonNull final String paymentId) {
         // noinspection BlockingMethodInNonBlockingContext
         return Mono.fromCallable(() -> bookingRepository.persistBookingPayment(BookingStatus.PAID, paymentId, bookingId))
-                   .filter(Optional::isPresent)
+                   .filter(success -> success)
                    .switchIfEmpty(Mono.error(() -> new ResponseException(HttpStatus.NOT_FOUND, "Unable to find existing booking for completion status update")))
-                   .map(Optional::get)
                    .subscribeOn(datasourceScheduler);
     }
 
